# axxb_data_collection

./: CMakeLists.txt  README.md  package.xml
axxb_calibration/: CMakeLists.txt  README.md  package.xml
axxb_calibration/config/: 1875_pattern_tfs_set0.p  1875_pattern_tfs_set2.p  1875_robot_tfs_set0.p  1875_robot_tfs_set2.p  bimanual.rviz  camera_left_robot_calibration.yaml  camera_right_robot_calibration.yaml  new_pattern_tfs0.p  new_pattern_tfs1.p  new_pattern_tfs2.p  new_robot_tfs0.p  new_robot_tfs1.p  new_robot_tfs2.p  pattern_poses_wrt_cam_axis_13  pattern_poses_wrt_cam_axis_21  pattern_poses_wrt_cam_axis_22  pattern_poses_wrt_cam_rot_11  pattern_poses_wrt_robot_axis_23  pattern_poses_wrt_robot_rot_01  pattern_tfs.p  pattern_tfs_set0.p  pattern_tfs_set1.p  pattern_tfs_set2.p  pattern_tfs_set3.p  robot_tfs.p  robot_tfs_set0.p  robot_tfs_set1.p  robot_tfs_set2.p  robot_tfs_set3.p
axxb_calibration/launch/: camera_robot_calibration_camonhand.launch
axxb_calibration/scripts/: camera_robot_calibration_camonhand.py  error_collection.py  robotpose_saver.py
axxb_openrave/: .gitignore  CMakeLists.txt  package.xml  setup.py
axxb_openrave/objects/: base_mount.kinbody.xml  ensenso.kinbody.xml  floor_beams.kinbody.xml  lbv16_032_s90.kinbody.xml  scan_control.kinbody.xml  tool_mount.kinbody.xml  tooltip.kinbody.xml  workpiece.kinbody.xml
axxb_openrave/objects/meshes/: ensenso.stl  green_beam.stl  lbv16_032_s09.stl  lbv16_032_s90.wrl  plate_left_side.stl  plate_right_side.stl  rail_beam.stl  scan_control.stl  tool_mount.stl
axxb_openrave/robots/: weldbot_vs060.robot.xml
axxb_openrave/worlds/: welding.env.xml
axxb_perception/: .gitignore  CMakeLists.txt  package.xml
axxb_perception/launch/: ensenso_driver.launch
config/: pattern_poses_wrt_cam_axis_0  pattern_poses_wrt_cam_axis_01  pattern_poses_wrt_cam_axis_11  pattern_poses_wrt_cam_axis_12  pattern_poses_wrt_cam_axis_23  pattern_poses_wrt_cam_rot_01  pattern_poses_wrt_cam_rot_2  pattern_poses_wrt_robot_axis_0  pattern_poses_wrt_robot_axis_01  pattern_poses_wrt_robot_axis_1  pattern_poses_wrt_robot_axis_12  pattern_poses_wrt_robot_axis_13  pattern_poses_wrt_robot_axis_2  pattern_poses_wrt_robot_axis_22  pattern_poses_wrt_robot_rot_11  pattern_poses_wrt_robot_rot_21
launch/: camera_robot_calibration.launch  error_collection.launch  tf_transformation_broadcaster.launch  validate_calibration.launch
(+4 files in other folders)
